--- a/back-end/package.json
+++ b/back-end/package.json
@@ -17,6 +17,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.3",
+    "passport": "^0.5.3",
+    "passport-local": "^1.0.0",
     "pg-promise": "^10.11.1"
   }
 }
