--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
+    "react-select": "^5.3.2",
     "styled-components": "^5.3.5",
     "swiper": "^8.1.5",
     "web-vitals": "^2.1.4"
