--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^3.3.0",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-select": "^5.3.2",
     "styled-components": "^5.3.5",
     "swiper": "^8.1.5",
