Update node version

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engine": {
+    "node": "18.0.0"
+  },
   "scripts": {
     "start": "cd back-end && npm i && npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
